# ESP_Auto

./: .gitignore  CLAUDE.md  esp32_ternary_vision_spec.md
autoresearch/: overnight_search.py  overnight_v2.py  prepare.py  program.md  program_kernels.md  train.py  weekend_loop.py
docs/: XTENSA_SIMD_REFERENCE.md
docs/superpowers/plans/: 2026-03-28-psram-ping-pong-plan.md  2026-04-02-close-int8-accuracy-gap.md
docs/superpowers/specs/: 2026-03-28-psram-ping-pong-design.md  2026-04-02-close-int8-accuracy-gap-design.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/ternary_kernels/: CMakeLists.txt
firmware/components/ternary_kernels/include/: ternary_ops.h
firmware/components/ternary_kernels/src/: int8_kernels.c  ternary_conv2d.S  ternary_conv2d_ref.c  ternary_conv2d_simd.c  ternary_dense.S  ternary_dense_ref.c  ternary_dense_simd.c
firmware/components/ternary_kernels/test/: test_kernels.c
firmware/main/: CMakeLists.txt  camera.c  camera.h  inference.c  inference.h  main.c
harness/: flash_and_measure.py
model/: export_packed.py  quantize.py  train_baseline.py
model/tests/: test_c_kernels.py  test_inference_match.py
